# maml-rl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  debug_env.py  evaluate_lander_checkpoint.py  ga_solver  plot_results.py  pyproject.toml  run.py  train_log.txt  train_log_fixed_diff.txt  train_log_long.txt  train_log_narrow_zone.txt  train_log_sanity_super.txt  verify_env.py  visualize_trajectory.py
configs/: ant.yaml  ant_eval.yaml  base.py  config.yaml  mars_lander.yaml  mars_lander_oracle.yaml  nav.yaml  nav_eval.yaml  navigation.yaml
mars_lander_project/scripts/: debug_rewards.py  evaluate_comparison.py  visualize_difficulty.py
results/: ga_results.txt  ga_results_500.txt  report.md  train_log_curriculum.txt  train_log_final_policy.txt  train_log_new_reward.txt  train_log_random_x.txt  train_log_sanity.txt
src/maml_rl/: __init__.py  evaluation.py  maml.py  policies.py  training.py
src/maml_rl/envs/: ant.py  base.py  factory.py  mars_lander.py  navigation.py  navigation_vectorized.py
src/maml_rl/envs/cxx/: MarsLander.cpp  MarsLander.hpp  (+2 more)
src/maml_rl/utils/: __init__.py  device.py  optimization.py  returns.py
tests/: test_envs_ant.py  test_envs_navigation.py  test_factory.py  test_maml.py  test_optimization.py  test_policies.py  test_ppo_integration.py  test_returns.py  test_run_eval.py  test_run_pipeline.py  test_trpo.py
tests/envs/: test_envs_ant.py  test_envs_mars_lander.py  test_envs_navigation.py
tests/integration/: test_ppo_integration.py  test_run_eval.py  test_run_pipeline.py
tests/unit/: test_factory.py  test_maml.py  test_trpo.py
