[project]
name = "maml-rl"
version = "0.1.0"
description = "Replication of MAML RL experiments."
readme = "README.md"
authors = [
    { name = "clijo", email = "52968726+clijo@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gymnasium[mujoco]>=1.2.3",
    "jsonargparse>=4.45.0",
    "matplotlib>=3.10.8",
    "torchrl>=0.10.1",
    "wandb>=0.23.1",
]

[project.scripts]
maml-rl = "maml_rl.run:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
